[shenker/image_analysis] WIP pipeline. Playing with hard threshold barcode calling, spot-checking against FISH kymographs.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/240529 Pipeline.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/240529 Pipeline.ipynb
@@ -437,7 +437,7 @@
     "    output_dir / \"fish_measurements\", format=\"parquet\", partitioning=\"hive\"\n",
     ")\n",
     "# df = dataset.to_table(filter=ds.field(\"position\") == 14).to_pandas()\n",
-    "df = dataset.to_table().to_pandas()"
+    "df = dataset.to_table().to_pandas().sort_values(\"t\")"
    ]
   },
   {
@@ -467,26 +467,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fish_thresholds = {\"GFP\": 1400, \"Cy5\": 1500, \"Cy7\": 900}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "33",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df2 = df.assign(call=df[\"otsu_mean\"] > df[\"channel\"].map(fish_thresholds))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "34",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "hv.Violin(df, [\"channel\", \"t\"], \"otsu_mean\").opts(\n",
     "    hv.opts(\n",
     "        width=700,\n",
@@ -501,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,19 +516,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "37",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
-   "source": [
-    "# Science analysis"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38",
+   "id": "35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,11 +528,60 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stack_fish_crops(crops, channels, timepoints):\n",
+    "    stacks = {}\n",
+    "    for (fov_num, channel, t), frame_crops in crops.items():\n",
+    "        if fov_num not in stacks:\n",
+    "            stacks[fov_num] = {}\n",
+    "        if channel not in channels:\n",
+    "            continue\n",
+    "        channel_idx = channels.index(channel)\n",
+    "        timepoint_idx = timepoints.index(t)\n",
+    "        for trench_idx, trench_slice in frame_crops.items():\n",
+    "            if trench_idx not in stacks[fov_num]:\n",
+    "                stacks[fov_num][trench_idx] = zarr.create(\n",
+    "                    (len(channels), len(timepoints), *trench_slice.shape),\n",
+    "                    dtype=trench_slice.dtype,\n",
+    "                    fill_value=0,\n",
+    "                )\n",
+    "            stacks[fov_num][trench_idx][channel_idx, timepoint_idx, :, :] = trench_slice\n",
+    "    return stacks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "\n",
+    "stacks = stack_fish_crops(p.fish_crops, [\"BF\", \"GFP\", \"Cy5\", \"Cy7\"], list(range(1, 11)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stacks[8][2].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "39",
    "metadata": {},
    "outputs": [],
    "source": [
-    "display_image(p.fish_crops[(8, \"Cy5\", 1)][2], scale=1)"
+    "fish_thresholds = {\"GFP\": 1200, \"Cy5\": 1500, \"Cy7\": 800}"
    ]
   },
   {
@@ -572,7 +591,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(p._queue._items)"
+    "df2 = df.assign(call=df[\"otsu_mean\"] > df[\"channel\"].map(fish_thresholds))"
    ]
   },
   {
@@ -582,7 +601,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display_image(p.crops[(8, \"RFP-EM\", 200)][2], scale=True)"
+    "df2[(df2[\"fov_num\"] == 8) & (df2[\"roi\"] == 2) & (df2[\"channel\"] == \"GFP\")]"
    ]
   },
   {
@@ -592,8 +611,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = p.crops[(8, \"RFP-EM\", 200)][2]\n",
-    "y = watershed.segment(x)"
+    "display_image(\n",
+    "    image.unstack_multichannel(stacks[8][2], scale=True)\n",
+    ")  # , colors=fish_colors)"
    ]
   },
   {
@@ -603,7 +623,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display_image(skimage.color.label2rgb(y))"
+    "stacks[8][2][3].mean(axis=(1, 2))"
    ]
   },
   {
@@ -613,7 +633,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = p.segmentation_masks[(8, 200)][2]"
+    "display_image(stacks[8][2][3][2], scale=1)"
    ]
   },
   {
@@ -623,17 +643,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display_image(skimage.color.label2rgb(x))"
+    "stacks[8][2][3][2].mean()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "46",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "p.measurements[(8, \"RFP-EM\", 200)][2]"
+    "# Science analysis"
    ]
   },
   {
@@ -653,7 +673,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(p._queue._items)"
+    "display_image(p.fish_crops[(8, \"Cy5\", 1)][2], scale=1)"
    ]
   },
   {
@@ -663,13 +683,104 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "q = p._queue._items"
+    "len(p._queue._items)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_image(p.crops[(8, \"RFP-EM\", 200)][2], scale=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = p.crops[(8, \"RFP-EM\", 200)][2]\n",
+    "y = watershed.segment(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_image(skimage.color.label2rgb(y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = p.segmentation_masks[(8, 200)][2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_image(skimage.color.label2rgb(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.measurements[(8, \"RFP-EM\", 200)][2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.fish_crops.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(p._queue._items)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q = p._queue._items"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,7 +796,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51",
+   "id": "60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,7 +806,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52",
+   "id": "61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,7 +816,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53",
+   "id": "62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54",
+   "id": "63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,7 +836,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55",
+   "id": "64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -735,7 +846,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56",
+   "id": "65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -745,7 +856,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57",
+   "id": "66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -755,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58",
+   "id": "67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,7 +876,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59",
+   "id": "68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -775,7 +886,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60",
+   "id": "69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,7 +896,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61",
+   "id": "70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,7 +906,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62",
+   "id": "71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -820,7 +931,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63",
+   "id": "72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64",
+   "id": "73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -840,7 +951,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65",
+   "id": "74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -850,7 +961,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66",
+   "id": "75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -860,7 +971,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67",
+   "id": "76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,7 +981,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68",
+   "id": "77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,7 +991,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69",
+   "id": "78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -890,7 +1001,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70",
+   "id": "79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -900,7 +1011,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71",
+   "id": "80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -910,7 +1021,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72",
+   "id": "81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -920,7 +1031,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73",
+   "id": "82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,7 +1041,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74",
+   "id": "83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -944,7 +1055,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75",
+   "id": "84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -974,7 +1085,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76",
+   "id": "85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -985,7 +1096,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77",
+   "id": "86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -995,7 +1106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78",
+   "id": "87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1005,7 +1116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79",
+   "id": "88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1015,7 +1126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80",
+   "id": "89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1025,7 +1136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81",
+   "id": "90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1034,10 +1145,8 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "id": "91",
+   "metadata": {},
    "source": [
     "# Analysis"
    ]
@@ -1045,7 +1154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83",
+   "id": "92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1069,150 +1178,6 @@
     "#             return x / x.quantile(quantile)\n",
     "#         else:\n",
     "#             return x / np.nanquantile(x, quantile)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "84",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset = ds.dataset(\n",
-    "    output_dir / \"central_crop2/measurements\", format=\"parquet\", partitioning=\"hive\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "85",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "df = dataset.to_table(filter=ds.field(\"position\") == 14).to_pandas()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "86",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
-   "source": [
-    "# Manual FISH trench crops"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "87",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def crop_trenches(img, trenches):\n",
-    "    crops = {}\n",
-    "    # for i, crop in it.islice(geometry.iter_crops(img, trenches), 10, 13):\n",
-    "    for i, crop in geometry.iter_roi_crops(img, trenches):\n",
-    "        crops[i] = crop\n",
-    "    return crops\n",
-    "\n",
-    "\n",
-    "def stack_crops(crops, channels, timepoints):\n",
-    "    stacks = {}\n",
-    "    for (t, channel), frame_crops in crops.items():\n",
-    "        channel_idx = channels.index(channel)\n",
-    "        timepoint_idx = timepoints.index(t)\n",
-    "        for trench_idx, trench_slice in frame_crops.items():\n",
-    "            if trench_idx not in stacks:\n",
-    "                stacks[trench_idx] = zarr.create(\n",
-    "                    (len(channels), len(timepoints), *trench_slice.shape),\n",
-    "                    dtype=trench_slice.dtype,\n",
-    "                    fill_value=np.nan,\n",
-    "                )\n",
-    "            stacks[trench_idx][channel_idx, timepoint_idx, :, :] = trench_slice\n",
-    "    return stacks"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "88",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "delayed = util.get_delayed(True)\n",
-    "fish_frames = {}\n",
-    "fish_crops = {}\n",
-    "fish_channels = set()\n",
-    "fish_timepoints = set()\n",
-    "for msg in readers.send_eaton_fish(\n",
-    "    fish_filename,\n",
-    "    slices=dict(t=None, v=[8]),\n",
-    "    delayed=delayed,\n",
-    "):\n",
-    "    # print(msg[\"metadata\"],msg[\"image\"].shape)\n",
-    "    fish_img = msg[\"image\"]\n",
-    "    fish_img_corrected = delayed(calibrate_image)(fish_img, k1=k1)\n",
-    "    fov = msg[\"metadata\"][\"fov_num\"]\n",
-    "    t = msg[\"metadata\"][\"t\"]\n",
-    "    channel = msg[\"metadata\"][\"channel\"]\n",
-    "    fish_channels.add(channel)\n",
-    "    fish_timepoints.add(t)\n",
-    "    fish_frames[(t, channel)] = fish_img_corrected\n",
-    "    fish_crops[(t, channel)] = delayed(crop_trenches)(fish_img_corrected, trenches)\n",
-    "fish_channels = list(sorted(fish_channels))\n",
-    "fish_channel_colors = [fish_colors[ch] for ch in fish_channels]\n",
-    "fish_timepoints = list(sorted(fish_timepoints))\n",
-    "fish_stacks = delayed(stack_crops)(fish_crops, fish_channels, fish_timepoints)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "89",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "fish_frames0, fish_stacks0 = dask.compute(fish_frames, fish_stacks)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "90",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "fish_channels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "91",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "fish_timepoints"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "92",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fish_stacks0[10].info"
    ]
   },
   {
