--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/240602 Pipeline.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/240602 Pipeline.ipynb
@@ -370,6 +370,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "x, unmatched, axis_values = readers.slice_directory(\n",
+    "    output_dir / \"crops\",\n",
+    "    r\"fov=(?P<v>\\d+)/channel=(?P<c>[^/]+)/t=(?P<t>\\d+)\",\n",
+    "    files=False,\n",
+    "    recursive=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unmatched"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(readers._iter_dir(output_dir / \"crops\", recursive=True, files=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%time\n",
     "for msg in readers.send_eaton_fish(\n",
     "    fish_filename,\n",
@@ -381,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24",
+   "id": "28",
    "metadata": {},
    "source": [
     "# FISH analysis"
@@ -390,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36",
+   "id": "40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37",
+   "id": "41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38",
+   "id": "42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39",
+   "id": "43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40",
+   "id": "44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +643,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41",
+   "id": "45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,7 +653,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42",
+   "id": "46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43",
+   "id": "47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,7 +673,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44",
+   "id": "48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +683,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45",
+   "id": "49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,7 +695,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46",
+   "id": "50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,7 +704,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47",
+   "id": "51",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true
    },
@@ -670,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48",
+   "id": "52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,7 +725,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49",
+   "id": "53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,7 +735,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50",
+   "id": "54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51",
+   "id": "55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,7 +755,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52",
+   "id": "56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53",
+   "id": "57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,7 +776,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54",
+   "id": "58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -741,7 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55",
+   "id": "59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -751,7 +796,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56",
+   "id": "60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +806,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57",
+   "id": "61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,7 +816,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58",
+   "id": "62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -781,7 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59",
+   "id": "63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -791,7 +836,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60",
+   "id": "64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,7 +852,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61",
+   "id": "65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62",
+   "id": "66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -827,7 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63",
+   "id": "67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -837,7 +882,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64",
+   "id": "68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -847,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65",
+   "id": "69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -857,7 +902,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66",
+   "id": "70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,7 +912,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67",
+   "id": "71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -877,7 +922,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68",
+   "id": "72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -887,7 +932,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69",
+   "id": "73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -897,7 +942,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70",
+   "id": "74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -907,7 +952,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71",
+   "id": "75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -917,7 +962,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72",
+   "id": "76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -942,7 +987,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73",
+   "id": "77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -952,7 +997,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74",
+   "id": "78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -962,7 +1007,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75",
+   "id": "79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -972,7 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76",
+   "id": "80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -982,7 +1027,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77",
+   "id": "81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -992,7 +1037,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78",
+   "id": "82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1002,7 +1047,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79",
+   "id": "83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1012,7 +1057,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80",
+   "id": "84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1022,7 +1067,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81",
+   "id": "85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1032,7 +1077,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82",
+   "id": "86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1042,7 +1087,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83",
+   "id": "87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1052,7 +1097,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84",
+   "id": "88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1066,7 +1111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85",
+   "id": "89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1096,7 +1141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86",
+   "id": "90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1107,7 +1152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87",
+   "id": "91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1117,7 +1162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88",
+   "id": "92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1127,7 +1172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89",
+   "id": "93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1137,7 +1182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90",
+   "id": "94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1147,7 +1192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91",
+   "id": "95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1156,7 +1201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92",
+   "id": "96",
    "metadata": {},
    "source": [
     "# Analysis"
@@ -1165,7 +1210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93",
+   "id": "97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1193,7 +1238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94",
+   "id": "98",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true
    },
@@ -1204,7 +1249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95",
+   "id": "99",
    "metadata": {
     "tags": []
    },
@@ -1217,7 +1262,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96",
+   "id": "100",
    "metadata": {
     "tags": []
    },
@@ -1242,7 +1287,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97",
+   "id": "101",
    "metadata": {
     "tags": []
    },
@@ -1257,7 +1302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98",
+   "id": "102",
    "metadata": {
     "tags": []
    },
@@ -1269,7 +1314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99",
+   "id": "103",
    "metadata": {
     "tags": []
    },
@@ -1281,7 +1326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "100",
+   "id": "104",
    "metadata": {
     "tags": []
    },
@@ -1292,7 +1337,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "101",
+   "id": "105",
    "metadata": {},
    "source": [
     "# FISH analysis"
@@ -1301,7 +1346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "102",
+   "id": "106",
    "metadata": {
     "tags": []
    },
@@ -1322,7 +1367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "103",
+   "id": "107",
    "metadata": {
     "tags": []
    },
@@ -1334,7 +1379,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "104",
+   "id": "108",
    "metadata": {
     "tags": []
    },
@@ -1346,7 +1391,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "105",
+   "id": "109",
    "metadata": {
     "tags": []
    },
@@ -1358,7 +1403,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "106",
+   "id": "110",
    "metadata": {
     "tags": []
    },
@@ -1372,7 +1417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "107",
+   "id": "111",
    "metadata": {
     "tags": []
    },
@@ -1384,7 +1429,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "108",
+   "id": "112",
    "metadata": {
     "tags": []
    },
@@ -1396,7 +1441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "109",
+   "id": "113",
    "metadata": {
     "tags": []
    },
@@ -1408,7 +1453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "110",
+   "id": "114",
    "metadata": {
     "tags": []
    },
@@ -1421,7 +1466,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "111",
+   "id": "115",
    "metadata": {
     "tags": []
    },
@@ -1433,7 +1478,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "112",
+   "id": "116",
    "metadata": {
     "tags": []
    },
@@ -1445,7 +1490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "113",
+   "id": "117",
    "metadata": {
     "tags": []
    },
@@ -1457,7 +1502,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "114",
+   "id": "118",
    "metadata": {
     "tags": []
    },
@@ -1469,7 +1514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "115",
+   "id": "119",
    "metadata": {
     "tags": []
    },
@@ -1481,7 +1526,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "116",
+   "id": "120",
    "metadata": {
     "tags": []
    },
@@ -1493,7 +1538,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "117",
+   "id": "121",
    "metadata": {
     "tags": []
    },
@@ -1513,7 +1558,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "118",
+   "id": "122",
    "metadata": {
     "tags": []
    },
@@ -1534,7 +1579,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "119",
+   "id": "123",
    "metadata": {
     "tags": []
    },
@@ -1546,7 +1591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "120",
+   "id": "124",
    "metadata": {
     "tags": []
    },
@@ -1568,7 +1613,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "121",
+   "id": "125",
    "metadata": {
     "tags": []
    },
@@ -1580,7 +1625,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "122",
+   "id": "126",
    "metadata": {
     "tags": []
    },
@@ -1606,7 +1651,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "123",
+   "id": "127",
    "metadata": {
     "tags": []
    },
@@ -1618,7 +1663,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "124",
+   "id": "128",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1628,7 +1673,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "125",
+   "id": "129",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1646,7 +1691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "126",
+   "id": "130",
    "metadata": {
     "tags": []
    },
@@ -1670,7 +1715,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "127",
+   "id": "131",
    "metadata": {
     "tags": []
    },
@@ -1693,7 +1738,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "128",
+   "id": "132",
    "metadata": {
     "tags": []
    },
@@ -1708,7 +1753,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "129",
+   "id": "133",
    "metadata": {
     "tags": []
    },
@@ -1720,7 +1765,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "130",
+   "id": "134",
    "metadata": {
     "tags": []
    },
@@ -1734,7 +1779,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "131",
+   "id": "135",
    "metadata": {
     "tags": []
    },
@@ -1748,7 +1793,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "132",
+   "id": "136",
    "metadata": {
     "tags": []
    },
@@ -1762,7 +1807,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "133",
+   "id": "137",
    "metadata": {
     "tags": []
    },
