--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/240620 For Gaurav.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/240620 For Gaurav.ipynb
@@ -132,8 +132,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.Curve(np.random.random(10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9",
    "metadata": {},
    "source": [
     "# Functions"
@@ -142,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11",
+   "id": "12",
    "metadata": {},
    "source": [
     "# Config"
@@ -183,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "19",
    "metadata": {
     "tags": []
    },
@@ -330,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23",
+   "id": "24",
    "metadata": {},
    "source": [
     "# Pipeline"
@@ -387,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +565,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,7 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36",
+   "id": "37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +623,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37",
+   "id": "38",
    "metadata": {},
    "source": [
     "# Science analysis"
@@ -622,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38",
+   "id": "39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39",
+   "id": "40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +665,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40",
+   "id": "41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41",
+   "id": "42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,7 +687,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42",
+   "id": "43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,24 +697,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image.unstack_multichannel(crops[:, 8, :, 7].squeeze().swapaxes(0, 1)).shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "44",
    "metadata": {},
    "outputs": [],
    "source": [
-    "display_image(\n",
-    "    image.unstack_multichannel(crops[:, 8, :, 7].squeeze().swapaxes(0, 1)),\n",
-    "    scale=1,\n",
-    ")"
+    "image.unstack_multichannel(crops[:, 8, :, 7].squeeze().swapaxes(0, 1)).shape"
    ]
   },
   {
@@ -727,7 +724,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "segmentation_masks[:, 8, 7].squeeze().shape"
+    "display_image(\n",
+    "    image.unstack_multichannel(crops[:, 8, :, 7].squeeze().swapaxes(0, 1)),\n",
+    "    scale=1,\n",
+    ")"
    ]
   },
   {
@@ -737,13 +737,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np."
+    "segmentation_masks[:, 8, 7].squeeze().shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -755,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49",
+   "id": "50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,7 +775,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50",
+   "id": "51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -775,7 +785,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51",
+   "id": "52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,7 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52",
+   "id": "53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,7 +805,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53",
+   "id": "54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -805,7 +815,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54",
+   "id": "55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -815,7 +825,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55",
+   "id": "56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,7 +840,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56",
+   "id": "57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -842,7 +852,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57",
+   "id": "58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -854,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58",
+   "id": "59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -869,7 +879,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59",
+   "id": "60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60",
+   "id": "61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -893,7 +903,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61",
+   "id": "62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -906,7 +916,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62",
+   "id": "63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -921,7 +931,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63",
+   "id": "64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -940,7 +950,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64",
+   "id": "65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -950,7 +960,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65",
+   "id": "66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -960,7 +970,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66",
+   "id": "67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -970,26 +980,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image.unstack(crops[:, 8, :, 417].squeeze(), axis=1).shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "68",
    "metadata": {},
    "outputs": [],
    "source": [
-    "display_image(\n",
-    "    image.unstack_multichannel(\n",
-    "        crops[10:, 8, :, 417].squeeze().swapaxes(0, 1),\n",
-    "    ),\n",
-    "    downsample=4,\n",
-    ")"
+    "image.unstack(crops[:, 8, :, 417].squeeze(), axis=1).shape"
    ]
   },
   {
@@ -1000,13 +995,10 @@
    "outputs": [],
    "source": [
     "display_image(\n",
-    "    image.unstack(\n",
-    "        skimage.color.label2rgb(\n",
-    "            np.nan_to_num(segmentation_masks[:, 8, 417].squeeze()).astype(np.uint16)\n",
-    "        ),\n",
-    "        axis=2,\n",
+    "    image.unstack_multichannel(\n",
+    "        crops[10:, 8, :, 417].squeeze().swapaxes(0, 1),\n",
     "    ),\n",
-    "    scale=1,\n",
+    "    downsample=4,\n",
     ")"
    ]
   },
@@ -1035,6 +1027,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "display_image(\n",
+    "    image.unstack(\n",
+    "        skimage.color.label2rgb(\n",
+    "            np.nan_to_num(segmentation_masks[:, 8, 417].squeeze()).astype(np.uint16)\n",
+    "        ),\n",
+    "        axis=2,\n",
+    "    ),\n",
+    "    scale=1,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%time\n",
     "dataset = ds.dataset(output_dir / \"measurements\", format=\"parquet\", partitioning=\"hive\")\n",
     "# df = dataset.to_table(filter=ds.field(\"position\") == 14).to_pandas()\n",
@@ -1049,7 +1059,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72",
+   "id": "73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1059,7 +1069,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73",
+   "id": "74",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.write_parquet(output_dir / \"measurements.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1068,13 +1088,28 @@
     "    pl.col(\"roi\") == 211,\n",
     "    pl.col(\"label\") == 1,\n",
     "    pl.col(\"t\").is_between(15, 200),\n",
+    ").to_pandas().set_index(\"t\").plot(x=\"t\", y=\"intensity_mean\", hue=\"channel\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.filter(\n",
+    "    pl.col(\"fov_num\") == 8,\n",
+    "    pl.col(\"roi\") == 212,\n",
+    "    pl.col(\"label\") == 1,\n",
+    "    pl.col(\"t\").is_between(15, 200),\n",
     ").to_pandas().hvplot(\"t\", \"intensity_mean\", by=\"channel\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74",
+   "id": "77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1089,7 +1124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75",
+   "id": "78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1107,7 +1142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76",
+   "id": "79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1122,7 +1157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77",
+   "id": "80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1132,7 +1167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78",
+   "id": "81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1142,7 +1177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79",
+   "id": "82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1152,7 +1187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80",
+   "id": "83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1162,7 +1197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81",
+   "id": "84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1172,7 +1207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82",
+   "id": "85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1182,7 +1217,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83",
+   "id": "86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1192,7 +1227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84",
+   "id": "87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1202,7 +1237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85",
+   "id": "88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1213,7 +1248,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86",
+   "id": "89",
    "metadata": {},
    "source": [
     "# Export"
@@ -1222,7 +1257,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87",
+   "id": "90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1240,7 +1275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88",
+   "id": "91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1250,7 +1285,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89",
+   "id": "92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1275,7 +1310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90",
+   "id": "93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1289,7 +1324,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91",
+   "id": "94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1309,7 +1344,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92",
+   "id": "95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1324,7 +1359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93",
+   "id": "96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1334,7 +1369,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94",
+   "id": "97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1347,7 +1382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95",
+   "id": "98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1357,7 +1392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96",
+   "id": "99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1372,7 +1407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97",
+   "id": "100",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1382,7 +1417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98",
+   "id": "101",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1393,7 +1428,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99",
+   "id": "102",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1417,7 +1452,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
